--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-menu></app-menu>
-<app-home></app-home>
+<router-outlet></router-outlet> <!-- chamando esta diretiva, significa que a navegação ocorrerá aqui dentro -->
 <app-footer></app-footer>
